--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "x-ray-slow-proxy-driver",
   "description": "node-slow-caching-proxy request driver for x-ray",
-  "version": "1.0.0-SNAPSHOT",
+  "version": "1.0.0",
   "license": "MIT",
   "main": "./driver.js",
   "author": {
